# button-beam-desktop

./: components.json  index.html  mod.rs  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  shortcuts.rs  sockets.rs
src/components/: AddShortcutForm.tsx  ConnectWithQR.tsx
src/components/ui/: dialog.tsx  typography.tsx
