[package]
name = "button-beam-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
futures-util = "0.3"
uuid="1.10.0"
btleplug = "0.11"
winrt = "0.8.0"
local_ipaddress = "0.1.3"
enigo = "0.2.1"
once_cell = "1.20.1"
windows = { version = "0.34", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Radios",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_Com",
] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
btle = "0.1.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
bluster = "0.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
